# ROS_Agents

./: .aider.chat.history.md  .aider.conf.yml  .aider.input.history  .cursorignore  .env  .gitignore  .python-version  CONVENTIONS.md  README.md  requirements.txt  source_all.sh
.aider.tags.cache.v3/: cache.db  cache.db-shm  cache.db-wal
data/conversation_logs/: conversation_log_1727950854.txt  conversation_log_1727950867.txt  conversation_log_1727950872.txt  conversation_log_1727950878.txt  conversation_log_1727951145.txt  conversation_log_1727952179.txt  conversation_log_1727952378.txt  conversation_log_1727952481.txt  conversation_log_1727952566.txt  conversation_log_1727952681.txt  conversation_log_1727952950.txt  conversation_log_1727953131.txt  conversation_log_1727953304.txt  conversation_log_1727953381.txt  conversation_log_1727953705.txt  conversation_log_1727976670.txt  conversation_log_1727976799.txt  conversation_log_1728035883.txt  conversation_log_1728036178.txt  conversation_log_1728066144.txt  conversation_log_1728066623.txt  conversation_log_1728216597.txt  conversation_log_1728216779.txt  conversation_log_1728230944.txt  conversation_log_1728231925.txt  conversation_log_1728232720.txt  conversation_log_1728234027.txt  conversation_log_1728234741.txt  (+5 more)
devel/: .catkin  local_setup.sh  setup.sh
src/planning_agent/: CMakeLists.txt  package.xml
src/planning_agent/scripts/: planning_agent.py  run_planning_agent.sh
src/planning_agent/test/: test_planning_agent.py
venv_ros_noetic/: pyvenv.cfg
venv_ros_py310/: pyvenv.cfg
(+103 files in other folders)
